--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "exrates-front": {
+    "exrates-front-new": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/exrates-front",
+            "outputPath": "dist/exrates-front-new",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "exrates-front:build"
+            "browserTarget": "exrates-front-new:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "exrates-front:build:production"
+              "browserTarget": "exrates-front-new:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "exrates-front:build"
+            "browserTarget": "exrates-front-new:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "exrates-front-e2e": {
+    "exrates-front-new-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "exrates-front:serve"
+            "devServerTarget": "exrates-front-new:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "exrates-front:serve:production"
+              "devServerTarget": "exrates-front-new:serve:production"
             }
           }
         },
@@ -127,10 +127,5 @@
       }
     }
   },
-  "defaultProject": "exrates-front",
-  "schematics": {
-    "@schematics/angular:component": {
-      "styleext": "scss"
-    }
-  }
+  "defaultProject": "exrates-front-new"
 }
