--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "ng-jwt": "^1.1.11",
     "ng5-slider": "^1.1.3",
+    "ngx-webcam": "^0.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
