--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "geetest": "^4.1.2",
+    "jwt-decode": "^2.2.0",
     "mydatepicker": "^2.6.5",
     "ng-jwt": "^1.1.11",
     "ng5-slider": "^1.1.3",
