--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng5-slider": "^1.1.3",
     "ngx-webcam": "^0.2.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
