--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular2-qrcode": "^2.0.1",
     "core-js": "^2.5.4",
     "geetest": "^4.1.2",
     "jwt-decode": "^2.2.0",
