implement grid for dashboard

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular2-qrcode": "^2.0.1",
+    "angular2gridster": "^6.0.4",
     "core-js": "^2.5.4",
     "geetest": "^4.1.2",
     "jwt-decode": "^2.2.0",
