--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@stomp/ng2-stompjs": "^6.1.0-beta.4",
     "angular2-qrcode": "^2.0.1",
     "angular2gridster": "^6.0.4",
     "core-js": "^2.5.4",
@@ -29,8 +30,10 @@
     "ng-jwt": "^1.1.11",
     "ng5-slider": "^1.1.3",
     "ngx-webcam": "^0.2.0",
+    "npm": "^6.4.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
+    "sockjs-client": "^1.3.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
