--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,14 @@
                   "with": "src/environments/environment.staging.ts"
                 }
               ]
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
             }
           }
         },
@@ -69,6 +77,9 @@
               "browserTarget": "exrates-front-new:build:production"
             },
             "staging": {
+              "browserTarget": "exrates-front-new:build:staging"
+            },
+            "dev": {
               "browserTarget": "exrates-front-new:build:staging"
             }
           }
