--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng-jwt": "^1.1.11",
     "ng5-slider": "^1.1.3",
     "ngx-pagination": "^3.2.1",
+    "ngx-perfect-scrollbar": "^7.0.0",
     "ngx-scrollbar": "^2.2.0",
     "ngx-webcam": "^0.2.0",
     "npm": "^6.4.1",
