--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^2.2.0",
     "mydatepicker": "^2.6.5",
     "ng-jwt": "^1.1.11",
+    "ng-recaptcha": "^4.2.1",
     "ng5-slider": "^1.1.3",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
