--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
     "@stomp/ng2-stompjs": "^6.1.0-beta.4",
     "angular2-qrcode": "^2.0.1",
     "angular2gridster": "^6.0.4",
@@ -28,6 +30,7 @@
     "geetest": "^4.1.2",
     "jwt-decode": "^2.2.0",
     "mydatepicker": "^2.6.5",
+    "reselect": "^3.0.0",
     "ng-jwt": "^1.1.11",
     "ng5-slider": "^1.1.3",
     "ngx-pagination": "^3.2.1",
