--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mydatepicker": "^2.6.5",
     "reselect": "^3.0.0",
     "ng-jwt": "^1.1.11",
+    "ng-recaptcha": "^4.2.1",
     "ng5-slider": "^1.1.3",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
