--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
     "@stomp/ng2-stompjs": "^6.1.0-beta.4",
     "angular2-qrcode": "^2.0.1",
     "angular2gridster": "^6.0.4",
@@ -30,7 +31,6 @@
     "geetest": "^4.1.2",
     "jwt-decode": "^2.2.0",
     "mydatepicker": "^2.6.5",
-    "reselect": "^3.0.0",
     "ng-jwt": "^1.1.11",
     "ng-recaptcha": "^4.2.1",
     "ng5-slider": "^1.1.3",
@@ -39,6 +39,7 @@
     "ngx-scrollbar": "^2.2.0",
     "ngx-webcam": "^0.2.0",
     "npm": "^6.4.1",
+    "reselect": "^3.0.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "sockjs-client": "^1.3.0",
