--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng-jwt": "^1.1.11",
     "ng-recaptcha": "^4.2.1",
     "ng5-slider": "^1.1.3",
+    "ngx-infinite-scroll": "^6.0.1",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
     "ngx-scrollbar": "^2.2.0",
