--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract-dashboard": "ngx-translate-extract --input ./src/app/dashboard ./src/app/popups ./src/app/header  ./src/app/footer --output ./src/assets/i18n/dashboard/_base.json --clean --sort --format namespaced-json",
-    "extract-funds": "ngx-translate-extract --input ./src/app/funds --output ./src/assets/i18n/funds/_base.json --clean --sort --format namespaced-json",
-    "extract-orders": "ngx-translate-extract --input ./src/app/orders --output ./src/assets/i18n/orders/_base.json --clean --sort --format namespaced-json",
-    "extract-all": "npm run extract-dashboard && npm run extract-funds && npm run extract-orders"
+    "extract-dashboard": "ngx-translate-extract --input ./src/app/orders ./src/app/funds ./src/app/dashboard ./src/app/referral ./src/app/popups ./src/app/header  ./src/app/footer --output ./src/assets/i18n/dashboard/_base.json --clean --sort --format json",
+    "extract-funds": "ngx-translate-extract --input ./src/app/funds --output ./src/assets/i18n/funds/_base.json --clean --sort --format  json",
+    "extract-orders": "ngx-translate-extract --input ./src/app/orders --output ./src/assets/i18n/orders/_base.json --clean --sort --format  json",
+
+    "extract-privacy-policy": "ngx-translate-extract --input ./src/app/static-pages/privacy-policy --output ./src/assets/i18n/static-files/privacy-policy_base.json --clean --sort --format json",
+    "extract-about-us": "ngx-translate-extract --input ./src/app/static-pages/about-us --output ./src/assets/i18n/static-files/about-us_base.json --clean --sort --format json",
+    "extract-contacts": "ngx-translate-extract --input ./src/app/static-pages/contacts --output ./src/assets/i18n/static-files/contacts_base.json --clean --sort --format  json",
+    "extract-terms-and-conditions": "ngx-translate-extract --input ./src/app/static-pages/terms-and-conditions --output ./src/assets/i18n/static-files/terms-and-conditions_base.json --clean --sort --format json",
+
+    "extract-all": "npm run extract-privacy-policy && npm run extract-about-us && npm run extract-contacts && npm run extract-terms-and-conditions && npm run extract-dashboard"
   },
   "private": true,
   "dependencies": {
