--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract-dashboard": "ngx-translate-extract --input ./src/app/settings ./src/app/orders ./src/app/funds ./src/app/dashboard ./src/app/referral ./src/app/popups ./src/app/header ./src/app/auth ./src/app/footer --output ./translate/baseJSON/_app.json --clean --sort --format json",
 
+    "to-csv-app": "ngx-translate-extract-csv -i ./translate/baseJSON -o translate/csv/app.csv -l _app",
+    "to-csv-about-us": "ngx-translate-extract-csv -i ./translate/baseJSON -o translate/csv/about-us.csv -l about-us_base",
+    "to-csv-privacy-policy": "ngx-translate-extract-csv -i ./translate/baseJSON -o translate/csv/privacy-policy.csv -l privacy-policy_base",
+    "to-csv-contacts": "ngx-translate-extract-csv -i ./translate/baseJSON -o translate/csv/contacts.csv -l contacts_base",
+    "to-csv-terms-and-conditions": "ngx-translate-extract-csv -i ./translate/baseJSON -o translate/csv/terms-and-conditions.csv -l terms-and-conditions_base",
+    "to-extract-all-csv": " npm run csv-app && npm run csv-about-us && npm run csv-privacy-policy && npm run csv-contacts && npm run csv-terms-and-conditions",
+
+    "extract-dashboard": "ngx-translate-extract --input ./src/app/settings ./src/app/orders ./src/app/funds ./src/app/dashboard ./src/app/referral ./src/app/popups ./src/app/header ./src/app/auth ./src/app/footer --output ./translate/baseJSON/_app.json --clean --sort --format json",
     "extract-privacy-policy": "ngx-translate-extract --input ./src/app/static-pages/privacy-policy --output ./translate/baseJSON/privacy-policy_base.json --clean --sort --format json",
     "extract-about-us": "ngx-translate-extract --input ./src/app/static-pages/about-us --output ./translate/baseJSON/about-us_base.json --clean --sort --format json",
     "extract-contacts": "ngx-translate-extract --input ./src/app/static-pages/contacts --output ./translate/baseJSON/contacts_base.json --clean --sort --format  json",
     "extract-terms-and-conditions": "ngx-translate-extract --input ./src/app/static-pages/terms-and-conditions --output ./translate/baseJSON/terms-and-conditions_base.json --clean --sort --format json",
-
     "extract-all": "npm run extract-privacy-policy && npm run extract-about-us && npm run extract-contacts && npm run extract-terms-and-conditions && npm run extract-dashboard"
   },
   "private": true,
@@ -77,6 +83,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-translate-extract-csv": "^1.1.1",
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
