--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -11,6 +11,7 @@
 	"3rd level of your referral structure deepness": "",
 	"About us": "",
 	"Accepted": "",
+	"Account": "",
 	"Account changes": "",
 	"Add Nickname": "",
 	"Address": "",
@@ -58,6 +59,7 @@
 	"Code is wrong! New code was sent to your email.": "",
 	"Coins will be deposited immediately after <b>2</b> network confirmations": "",
 	"Comission": "",
+	"Commission": "",
 	"Confirm the email": "",
 	"Congratulations!": "",
 	"Contacts and Support": "",
@@ -111,6 +113,7 @@
 	"Enter this code to telegram bot": "",
 	"Enter valid email to transfer": "",
 	"Enterh the autentification code": "",
+	"Estimated Holdings": "",
 	"Estimated Holdings:": "",
 	"Estimated holdings": "",
 	"Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.": "",
@@ -179,6 +182,7 @@
 	"Limit Sell Order Created!": "",
 	"Limit Sell Order not created!": "",
 	"Link": "",
+	"Log In": "",
 	"Log in": "",
 	"Log in, Withdrawal, Inner transfer": "",
 	"Log out": "",
@@ -241,7 +245,7 @@
 	"Pair/Date": "",
 	"Passport": "",
 	"Password": "",
-	"Password cannot be less than 8 characters long and should contain of letters (a-z), numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+' characters": "",
+	"Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z), numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+' characters": "",
 	"Password must be between 8 and 20 symbols, contain letters and numbers.": "",
 	"Passwords you provided do not match.": "",
 	"Payment system": "",
@@ -312,6 +316,7 @@
 	"Set merchant adress for withdrawal": "",
 	"Settings": "",
 	"Show zero": "",
+	"Sign In": "",
 	"Sign up": "",
 	"Sorry but you dont have enough USD on your balance to connect two factor authorisation by sms": "",
 	"Sorry, refill is closed for current moment!": "",
