--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@stomp/ng2-stompjs": "^6.1.0-beta.4",
+    "angular2-moment": "^1.9.0",
     "angular2-qrcode": "^2.0.1",
     "angular2gridster": "^6.0.4",
     "core-js": "^2.5.4",
