--- a/package.json
+++ b/package.json
@@ -23,70 +23,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@ng-select/ng-select": "^2.13.0",
-    "@ngrx/effects": "^6.1.2",
-    "@ngrx/store": "^6.1.2",
-    "@ngrx/store-devtools": "^6.1.2",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
-    "@stomp/ng2-stompjs": "^6.1.0-beta.4",
-    "angular2-moment": "^1.9.0",
+    "@angular/animations": "^7.2.5",
+    "@angular/cdk": "^7.3.2",
+    "@angular/common": "^7.2.5",
+    "@angular/compiler": "^7.2.5",
+    "@angular/core": "^7.2.5",
+    "@angular/forms": "^7.2.5",
+    "@angular/http": "^7.2.5",
+    "@angular/platform-browser": "^7.2.5",
+    "@angular/platform-browser-dynamic": "^7.2.5",
+    "@angular/platform-server": "^7.2.5",
+    "@angular/router": "^7.2.5",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "angular2-qrcode": "^2.0.1",
-    "angular2gridster": "^6.0.4",
+    "angular2gridster": "^7.0.2",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.5",
     "file-saver": "^2.0.0",
     "geetest": "^4.1.2",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "mydatepicker": "^2.6.5",
-    "ng-jwt": "^1.1.11",
     "ng-recaptcha": "^4.2.1",
     "ng5-slider": "^1.1.3",
-    "ngx-infinite-scroll": "^6.0.1",
+    "ngx-infinite-scroll": "^7.0.1",
+    "ngx-moment": "^3.3.0",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
-    "ngx-scrollbar": "^2.2.0",
     "ngx-webcam": "^0.2.0",
-    "npm": "^6.7.0",
     "reselect": "^3.0.0",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.3.3",
-    "sockjs-client": "^1.3.0",
-    "zone.js": "~0.8.26"
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "^7.3.1",
     "@angular/compiler-cli": "^7.2.5",
-    "@angular/language-service": "^6.1.0",
+    "@angular/language-service": "^7.2.5",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^1.10.31",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "google-charts": "^1.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "@types/node": "^11.9.4",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "ngx-translate-extract-csv": "^1.1.1",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^3.2.4"
+    "tslint": "^5.12.1",
+    "typescript": "3.2.4"
   }
 }
