--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "reselect": "^3.0.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "sockjs-client": "^1.3.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
