added script to run preprod backend on local host

--- a/angular.json
+++ b/angular.json
@@ -102,6 +102,9 @@
             "production": {
               "browserTarget": "exrates-front-new:build:production"
             },
+            "pre-prod": {
+              "browserTarget": "exrates-front-new:build:pre-prod"
+            },
             "staging": {
               "browserTarget": "exrates-front-new:build:staging"
             },
