--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --configuration=dev --aot",
     "startPreprod": "ng serve --configuration=pre-prod-local --aot",
-    "build": "ng build",
+    "build": "node --max-old-space-size=4096 ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
