--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.5",
+    "@angular/animations": "^7.2.13",
     "@angular/cdk": "^7.3.2",
     "@angular/common": "^7.2.5",
     "@angular/compiler": "^7.2.12",
@@ -56,6 +56,7 @@
     "ngx-moment": "^3.3.0",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
+    "ngx-toastr": "^10.0.2",
     "ngx-webcam": "^0.2.0",
     "pretty-num": "^0.2.2",
     "reselect": "^3.0.0",
@@ -65,9 +66,9 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "^7.2.5",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@types/jasmine": "^3.3.9",
@@ -77,7 +78,7 @@
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
