--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ngx-perfect-scrollbar": "^7.0.0",
     "ngx-toastr": "^10.0.2",
     "ngx-webcam": "^0.2.0",
+    "ngx-xml2json": "^1.0.2",
     "pretty-num": "^0.2.2",
     "reselect": "^3.0.0",
     "rxjs": "^6.4.0",
