--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "ngx-translate-extract-csv": "^1.1.1",
+    "node-sass": "^4.7.2",
     "protractor": "^5.4.2",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~5.0.1",
