--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ngx-toastr": "^10.0.2",
     "ngx-webcam": "^0.2.0",
     "ngx-xml2json": "^1.0.2",
+    "node-sass": "^4.12.0",
     "pretty-num": "^0.2.2",
     "reselect": "^3.0.0",
     "rxjs": "^6.4.0",
