update translate keys

--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -5,12 +5,16 @@
 	" the code will be sent to you after transaction verification ": "",
 	" to restart procedure": "",
 	"(Filtered)": "",
+	"(ieo) Token sale and economics": "",
+	"(ieo) token release schedule": "",
 	"24h chg": "",
 	"24h high": "",
 	"24h low": "",
 	"24h volume": "",
 	"2FA": "",
+	"A Token X-platform for transformative projects": "",
 	"API Keys": "",
+	"API key name cannot be less than 4 and more than 15 characters long and should contain of letters (a-z A-Z).": "",
 	"About us": "",
 	"Accept the terms of the agreement": "",
 	"Accepted": "",
@@ -19,8 +23,10 @@
 	"Add Nickname": "",
 	"Address": "",
 	"Address for withdraw money": "",
+	"Aditional information": "",
 	"After creating a nickname, it will not be possible to change it": "",
 	"After making a withdrawal, you can track its progress in history on funds page": "",
+	"After sucessfull finishing of IEO coins are delivered to your balance.": "",
 	"All users must complete identity verification to meet the requirements of this project": "",
 	"Already have an account?": "",
 	"Amount": "",
@@ -28,6 +34,7 @@
 	"Anyone who knows the code may recive the transfer": "",
 	"Api keys": "",
 	"Api-key successfully created": "",
+	"Apply project to X-Platform": "",
 	"Are you sure to cancel all filtered orders?": "",
 	"Are you sure to cancel all orders?": "",
 	"Are you sure you want to cancel selected order?": "",
@@ -45,6 +52,7 @@
 	"Available balance ": "",
 	"Available:": "",
 	"Avg": "",
+	"Awerness: Please remeber that crypto is high risky investments. Ofcourse we do all best to filter projects but all responsibility is still on your syde.": "",
 	"BAlance": "",
 	"Back to log in": "",
 	"Back to withdrawal form": "",
@@ -54,13 +62,12 @@
 	"Become VIP": "",
 	"Buy": "",
 	"Buy Now": "",
+	"Buy coins in IEO": "",
 	"By Google": "",
 	"By registering you agree with": "",
 	"Cancel": "",
 	"Cancel all": "",
 	"Capture image form camera": "",
-	"Cerl Token sale and economics": "",
-	"Cerl token release schedule": "",
 	"Change %": "",
 	"Change password": "",
 	"Changes will take effect after re-login.<br>Session duration does not depend on time user’s last activity": "",
@@ -128,6 +135,7 @@
 	"Edit order": "",
 	"Email": "",
 	"Email Notifications": "",
+	"Email cannot be more than 40 characters long": "",
 	"Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)": "",
 	"Email confirmed": "",
 	"Email is required": "",
@@ -140,6 +148,7 @@
 	"Enter the phone number": "",
 	"Enter this code to telegram bot": "",
 	"Enter valid email to transfer": "",
+	"Enter your mail": "",
 	"Enterh the autentification code": "",
 	"Estimated Holdings": "",
 	"Estimated Holdings:": "",
@@ -147,6 +156,7 @@
 	"Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.": "",
 	"Example": "",
 	"Exchange comission:": "",
+	"Exrates X-Platform": "",
 	"FAQ": "",
 	"Failed to get google url": "",
 	"Failed to update your nickname!": "",
@@ -173,6 +183,7 @@
 	"Funds were sent": "",
 	"Generate new address": "",
 	"Get inner transfer": "",
+	"Get mail notification": "",
 	"Get verification code": "",
 	"Go to dashboard": "",
 	"Go to registration form": "",
@@ -183,6 +194,7 @@
 	"Hide zero": "",
 	"Hide zero balances": "",
 	"History": "",
+	"Hold or trade": "",
 	"Hold up a handwritten note with the phrase Exrates plus today's date": "",
 	"Hours": "",
 	"How it work?": "",
@@ -192,6 +204,7 @@
 	"ICO order": "",
 	"ID card": "",
 	"IEO": "",
+	"IEO starts in a specific time ": "",
 	"Id": "",
 	"Identity": "",
 	"Identity Verification": "",
@@ -200,6 +213,8 @@
 	"If you want to punish him with brute force - act": "",
 	"In Orders": "",
 	"In Withdraw": "",
+	"In case of sucessfull IEO coin will listed on Exchange as soon as ": "",
+	"In case of unseccessfull IEO all funds will be backed to all participants automatically.": "",
 	"In total": "",
 	"Inable colors for color-blinds": "",
 	"Incorrect code.": "",
@@ -260,6 +275,9 @@
 	"Not registered yet?": "",
 	"Notifications": "",
 	"Notifications from administrators": "",
+	"Notify me about upcoming projects ": "",
+	"Notify me about upcoming projects in email": "",
+	"Notify me about upcoming projects in telegram chanel": "",
 	"Now you can login <br> with your new password": "",
 	"Now, we need to create strong password.": "",
 	"OK": "",
@@ -270,7 +288,9 @@
 	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email": "",
 	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.": "",
 	"Only (A-z), (–), (=) are allowed": "",
+	"Only latin characters(a-z) are allowed.": "",
 	"Only numbers are allowed.": "",
+	"Only verified accounts can access to IEO. Verification is needed only one time.": "",
 	"Open": "",
 	"Open orders": "",
 	"Operation type": "",
@@ -286,6 +306,7 @@
 	"Pair / Vol": "",
 	"Pair/Date": "",
 	"Participate": "",
+	"Partner News": "",
 	"Passport": "",
 	"Password": "",
 	"Password cannot be more than 20 characters long.": "",
@@ -323,6 +344,7 @@
 	"Please then click on the confirmation link in your email": "",
 	"Please, enter valid email address": "",
 	"Please, enter valid email address.": "",
+	"Please, remeber that all risks are on your side.": "",
 	"Plug in telegram bot": "",
 	"Prediction": "",
 	"Price": "",
@@ -340,7 +362,8 @@
 	"Qubera Balance": "",
 	"Rate for": "",
 	"Rating": "",
-	"Rating for Bittorent": "",
+	"Rating for (ieo)": "",
+	"Read More": "",
 	"Receive transfer": "",
 	"Refill": "",
 	"Refill balance": "",
@@ -363,6 +386,7 @@
 	"Sale of": "",
 	"Save": "",
 	"Search": "",
+	"Security": "",
 	"See": "",
 	"See results": "",
 	"Select currency": "",
@@ -408,7 +432,6 @@
 	"Terms and conditions": "",
 	"Terms of use": "",
 	"Thank you!": "",
-	"Thanks for contacting Exrates! Our support team will contact you as soon as possible. Stay tuned and have a profitable trading!": "",
 	"The information you fill in must be co consistent with the information in ID documents.": "",
 	"This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.": "",
 	"This code has been used already.": "",
@@ -474,6 +497,8 @@
 	"We have good news for you! It’s more then 24 currencies available for deposit right now:": "",
 	"We sent the confirmation link to": "",
 	"We will not credit your account with tokens from that sale": "",
+	"What are demends to Projects that whant to have IEO?": "",
+	"Why IEO is considered more safe than ICO?": "",
 	"Withdraw": "",
 	"Wrong email": "",
 	"Yes": "",
@@ -498,13 +523,13 @@
 	"Your available balance:": "",
 	"Your cam": "",
 	"Your daily output limit for this currency has been exceeded. Please try again tomorrow.": "",
-	"Your message sent": "",
 	"Your nickname is successfully updated!": "",
 	"Your payment was declined because of the administrator's harmfulness.": "",
 	"Your photo": "",
 	"Your session has expired. Please log in.": "",
 	"address": "",
 	"address for withdrawal": "",
+	"and can end any time after coins are sold.": "",
 	"background": "",
 	"close": "",
 	"delete": "",
@@ -514,6 +539,7 @@
 	"for safety, to confirm that you it is you": "",
 	"funds": "",
 	"has been ended": "",
+	"in email": "",
 	"logout": "",
 	"network confirmations": "",
 	"on your account": "",
@@ -528,6 +554,7 @@
 	"to deposit": "",
 	"to launch in 2019:": "",
 	"to make a payment": "",
+	"to this deposit address.": "",
 	"to: All Balance": "",
 	"to: All Balances": "",
 	"to: Pending Requests": "",
