--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -21,12 +21,12 @@
 	"Account": "",
 	"Account changes": "",
 	"Add Nickname": "",
+	"Additional information": "",
 	"Address": "",
 	"Address for withdraw money": "",
-	"Aditional information": "",
 	"After creating a nickname, it will not be possible to change it": "",
 	"After making a withdrawal, you can track its progress in history on funds page": "",
-	"After sucessfull finishing of IEO coins are delivered to your balance.": "",
+	"After successful finishing of IEO coins are delivered to your balance.": "",
 	"All users must complete identity verification to meet the requirements of this project": "",
 	"Already have an account?": "",
 	"Amount": "",
@@ -52,7 +52,7 @@
 	"Available balance ": "",
 	"Available:": "",
 	"Avg": "",
-	"Awerness: Please remeber that crypto is high risky investments. Ofcourse we do all best to filter projects but all responsibility is still on your syde.": "",
+	"Awareness: Please remember that crypto is high risky investments. Of course we do all best to filter projects but all responsibility is still on your side.": "",
 	"BAlance": "",
 	"Back to log in": "",
 	"Back to withdrawal form": "",
@@ -141,6 +141,7 @@
 	"Email is required": "",
 	"Enable": "",
 	"Enable GA": "",
+	"End Time": "",
 	"Enter API key name": "",
 	"Enter info": "",
 	"Enter memo ID": "",
@@ -184,6 +185,7 @@
 	"Generate new address": "",
 	"Get inner transfer": "",
 	"Get mail notification": "",
+	"Get ready for launch": "",
 	"Get verification code": "",
 	"Go to dashboard": "",
 	"Go to registration form": "",
@@ -213,8 +215,8 @@
 	"If you want to punish him with brute force - act": "",
 	"In Orders": "",
 	"In Withdraw": "",
-	"In case of sucessfull IEO coin will listed on Exchange as soon as ": "",
-	"In case of unseccessfull IEO all funds will be backed to all participants automatically.": "",
+	"In case of successful IEO coin will listed on Exchange as soon as ": "",
+	"In case of unsuccessful IEO all funds will be backed to all participants automatically.": "",
 	"In total": "",
 	"Inable colors for color-blinds": "",
 	"Incorrect code.": "",
@@ -234,7 +236,6 @@
 	"Limit Price": "",
 	"Limit order": "",
 	"Limit price": "",
-	"Loading last": "",
 	"Log In": "",
 	"Log in": "",
 	"Log out": "",
@@ -271,11 +272,9 @@
 	"No": "",
 	"No account?": "",
 	"No matching records found": "",
-	"No matching records found!": "",
 	"Not registered yet?": "",
 	"Notifications": "",
 	"Notifications from administrators": "",
-	"Notify me about upcoming projects ": "",
 	"Notify me about upcoming projects in email": "",
 	"Notify me about upcoming projects in telegram chanel": "",
 	"Now you can login <br> with your new password": "",
@@ -344,7 +343,8 @@
 	"Please then click on the confirmation link in your email": "",
 	"Please, enter valid email address": "",
 	"Please, enter valid email address.": "",
-	"Please, remeber that all risks are on your side.": "",
+	"Please, remember that all risks are on your side.": "",
+	"Please, use unique API key name": "",
 	"Plug in telegram bot": "",
 	"Prediction": "",
 	"Price": "",
@@ -489,6 +489,8 @@
 	"Users from the following jurisdictions will not be able to participate in this token sale:": "",
 	"Verification": "",
 	"Verify account": "",
+	"Verify account now": "",
+	"Verify your account id participate": "",
 	"View": "",
 	"Volume": "",
 	"Wait for the tokens to be added to your balance within the specified time.": "",
@@ -497,7 +499,7 @@
 	"We have good news for you! It’s more then 24 currencies available for deposit right now:": "",
 	"We sent the confirmation link to": "",
 	"We will not credit your account with tokens from that sale": "",
-	"What are demends to Projects that whant to have IEO?": "",
+	"What are demands to Projects that want to have IEO?": "",
 	"Why IEO is considered more safe than ICO?": "",
 	"Withdraw": "",
 	"Wrong email": "",
@@ -539,7 +541,6 @@
 	"for safety, to confirm that you it is you": "",
 	"funds": "",
 	"has been ended": "",
-	"in email": "",
 	"logout": "",
 	"network confirmations": "",
 	"on your account": "",
@@ -558,7 +559,6 @@
 	"to: All Balance": "",
 	"to: All Balances": "",
 	"to: Pending Requests": "",
-	"transactions": "",
 	"use only (A-z), (–), (=) symbols,": "",
 	"user can get the money if he knows the transfer code": "",
 	"© 2019 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved": "",
