make granph responsive to lang change, fetch last addition keys and attach to DEVEX-2225

--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -2,11 +2,11 @@
 	" Order created!": "",
 	" Order not created!": "",
 	" Sending any other coin or token to this address may result in the loss of your deposit.": "",
+	" Token sale and economics": "",
 	" the code will be sent to you after transaction verification ": "",
 	" to restart procedure": "",
+	" token release schedule": "",
 	"(Filtered)": "",
-	"(ieo) Token sale and economics": "",
-	"(ieo) token release schedule": "",
 	"24h chg": "",
 	"24h high": "",
 	"24h low": "",
@@ -159,6 +159,7 @@
 	"Exchange comission:": "",
 	"Exrates X-Platform": "",
 	"FAQ": "",
+	"FIAT": "",
 	"Failed to get google url": "",
 	"Failed to update your nickname!": "",
 	"Fav": "",
@@ -362,7 +363,7 @@
 	"Qubera Balance": "",
 	"Rate for": "",
 	"Rating": "",
-	"Rating for (ieo)": "",
+	"Rating for ": "",
 	"Read More": "",
 	"Receive transfer": "",
 	"Refill": "",
@@ -448,6 +449,7 @@
 	"To plug in two factor authorisation telegram bot go to": "",
 	"To the next step": "",
 	"Token Allocaation": "",
+	"Tool": "",
 	"Tools": "",
 	"Total": "",
 	"Total Price": "",
