--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exrates-front-new",
-  "version": "VERSION",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --configuration=dev --aot",
