DEVEX-2514 fixed KYC styles and localization

--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -2,17 +2,13 @@
 	" Order created!": "",
 	" Order not created!": "",
 	" Sending any other coin or token to this address may result in the loss of your deposit.": "",
-	" Token sale and economics": "",
 	" the code will be sent to you after transaction verification ": "",
-	" to restart procedure": "",
-	" token release schedule": "",
 	"(Filtered)": "",
 	"24h chg": "",
 	"24h high": "",
 	"24h low": "",
 	"24h volume": "",
 	"2FA": "",
-	"A Token X-platform for transformative projects": "",
 	"API Keys": "",
 	"API key name cannot be less than 4 and more than 15 characters long and should contain of letters (a-z A-Z).": "",
 	"About us": "",
@@ -26,15 +22,16 @@
 	"Address for withdraw money": "",
 	"After creating a nickname, it will not be possible to change it": "",
 	"After making a withdrawal, you can track its progress in history on funds page": "",
-	"After successful finishing of IEO coins are delivered to your balance.": "",
 	"All users must complete identity verification to meet the requirements of this project": "",
 	"Already have an account?": "",
+	"Ambassador Program": "",
 	"Amount": "",
 	"Amount: ": "",
 	"Anyone who knows the code may recive the transfer": "",
 	"Api keys": "",
 	"Api-key successfully created": "",
-	"Apply project to X-Platform": "",
+	"Apply to launch IEO on X-Platform": "",
+	"Apply to list": "",
 	"Are you sure to cancel all filtered orders?": "",
 	"Are you sure to cancel all orders?": "",
 	"Are you sure you want to cancel selected order?": "",
@@ -48,11 +45,11 @@
 	"Authenticator code": "",
 	"Authenticator code is required.": "",
 	"Authentification code": "",
+	"Available after ID verification": "",
 	"Available balance": "",
 	"Available balance ": "",
 	"Available:": "",
 	"Avg": "",
-	"Awareness: Please remember that crypto is high risky investments. Of course we do all best to filter projects but all responsibility is still on your side.": "",
 	"BAlance": "",
 	"Back to log in": "",
 	"Back to withdrawal form": "",
@@ -62,7 +59,7 @@
 	"Become VIP": "",
 	"Buy": "",
 	"Buy Now": "",
-	"Buy coins in IEO": "",
+	"Buy coins during IEO": "",
 	"By Google": "",
 	"By registering you agree with": "",
 	"Cancel": "",
@@ -70,7 +67,6 @@
 	"Capture image form camera": "",
 	"Change %": "",
 	"Change password": "",
-	"Changes will take effect after re-login.<br>Session duration does not depend on time user’s last activity": "",
 	"Chat": "",
 	"Check pin-code in your email": "",
 	"Check spam or other folders.": "",
@@ -97,7 +93,7 @@
 	"Confirm the email": "",
 	"Confirmed": "",
 	"Congratulations!": "",
-	"Contacts and Support": "",
+	"Contacts": "",
 	"Continue": "",
 	"Continue trading": "",
 	"Copied": "",
@@ -119,20 +115,16 @@
 	"Current password invalid.": "",
 	"Date": "",
 	"Date / Type": "",
-	"Date of Birth": "",
-	"Delete": "",
 	"Deposit": "",
 	"Disable GA": "",
 	"Disable Google 2FA": "",
 	"Do not withdraw directly to a crowdfund or ICO": "",
-	"Document Type": "",
 	"Document photo": "",
 	"Download Google Authenticator on your mobile device": "",
 	"Download image from computer": "",
 	"Download in excel": "",
 	"Download in excell": "",
 	"Download photo of document": "",
-	"Edit order": "",
 	"Email": "",
 	"Email Notifications": "",
 	"Email cannot be more than 40 characters long": "",
@@ -149,7 +141,7 @@
 	"Enter the phone number": "",
 	"Enter this code to telegram bot": "",
 	"Enter valid email to transfer": "",
-	"Enter your mail": "",
+	"Enter your email": "",
 	"Enterh the autentification code": "",
 	"Estimated Holdings": "",
 	"Estimated Holdings:": "",
@@ -158,14 +150,13 @@
 	"Example": "",
 	"Exchange comission:": "",
 	"Exrates X-Platform": "",
-	"FAQ": "",
-	"FIAT": "",
 	"Failed to get google url": "",
 	"Failed to update your nickname!": "",
 	"Fav": "",
 	"Favorites": "",
 	"Fee": "",
 	"Fee:": "",
+	"Fees": "",
 	"Fiat": "",
 	"Fiat Balances": "",
 	"Fiat Deposit": "",
@@ -176,22 +167,20 @@
 	"Filled": "",
 	"Filters": "",
 	"Finish registration": "",
-	"First Name": "",
-	"First Name is required.": "",
 	"For inner transactions users could use your nickname instead of email.": "",
+	"For sure.": "",
 	"Forgot password?": "",
 	"From": "",
 	"Funds": "",
 	"Funds were sent": "",
 	"Generate new address": "",
+	"Get email notifications": "",
 	"Get inner transfer": "",
-	"Get mail notification": "",
 	"Get ready for launch": "",
 	"Get verification code": "",
-	"Go to dashboard": "",
 	"Go to registration form": "",
 	"Google Authenticator": "",
-	"Google Translater": "",
+	"Google Translator": "",
 	"Graph": "",
 	"Hide all canceled": "",
 	"Hide zero": "",
@@ -200,24 +189,27 @@
 	"Hold or trade": "",
 	"Hold up a handwritten note with the phrase Exrates plus today's date": "",
 	"Hours": "",
+	"How does it work?": "",
 	"How it work?": "",
 	"How to set?": "",
 	"How would you like to refill the balance?": "",
 	"How would you like to send the money?": "",
 	"ICO order": "",
-	"ID card": "",
 	"IEO": "",
+	"IEO platform for transformative projects": "",
 	"IEO starts in a specific time ": "",
+	"IEO tokens will appear in your account right after the event is successfully concluded.": "",
 	"Id": "",
 	"Identity": "",
 	"Identity Verification": "",
+	"If the MEMO-text, TAG is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a MEMO, TAG.": "",
 	"If you dont save it, you always will be able to create a new.": "",
 	"If you haven't received the email, do the following:": "",
 	"If you want to punish him with brute force - act": "",
 	"In Orders": "",
 	"In Withdraw": "",
-	"In case of successful IEO coin will listed on Exchange as soon as ": "",
-	"In case of unsuccessful IEO all funds will be backed to all participants automatically.": "",
+	"In case of a successful IEO coin will listed on exchange.": "",
+	"In case of an unsuccessful IEO, all funds are returned to all participants automatically.": "",
 	"In total": "",
 	"Inable colors for color-blinds": "",
 	"Incorrect code.": "",
@@ -225,14 +217,15 @@
 	"Input / output": "",
 	"Instant transfer": "",
 	"Join our channel": "",
+	"KYC step 1": "",
+	"KYC step 2": "",
 	"Key features": "",
 	"Keyword of the coin": "",
 	"LOC": "",
 	"Language": "",
-	"Last Name": "",
-	"Last Name is required.": "",
 	"Last price": "",
 	"Layer 1": "",
+	"Level": "",
 	"Limit": "",
 	"Limit Price": "",
 	"Limit order": "",
@@ -260,7 +253,6 @@
 	"Minimum sum for deposit": "",
 	"Minimum sum for withdrawal": "",
 	"Minutes": "",
-	"Mobile applications": "",
 	"More": "",
 	"My": "",
 	"New API-key": "",
@@ -276,8 +268,8 @@
 	"Not registered yet?": "",
 	"Notifications": "",
 	"Notifications from administrators": "",
-	"Notify me about upcoming projects in email": "",
-	"Notify me about upcoming projects in telegram chanel": "",
+	"Notify me about upcoming projects by email": "",
+	"Notify me about upcoming projects through Telegram": "",
 	"Now you can login <br> with your new password": "",
 	"Now, we need to create strong password.": "",
 	"OK": "",
@@ -288,9 +280,8 @@
 	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email": "",
 	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.": "",
 	"Only (A-z), (–), (=) are allowed": "",
-	"Only latin characters(a-z) are allowed.": "",
 	"Only numbers are allowed.": "",
-	"Only verified accounts can access to IEO. Verification is needed only one time.": "",
+	"Only verified accounts can participate in IEO. Verification is needed only once.": "",
 	"Open": "",
 	"Open orders": "",
 	"Operation type": "",
@@ -307,7 +298,7 @@
 	"Pair/Date": "",
 	"Participate": "",
 	"Partner News": "",
-	"Passport": "",
+	"Pass ID verification": "",
 	"Password": "",
 	"Password cannot be more than 20 characters long.": "",
 	"Password field is required.": "",
@@ -338,13 +329,13 @@
 	"Please enter the transfer code to get money": "",
 	"Please enter two-factor authentication code that was sent to your email": "",
 	"Please go to": "",
+	"Please make sure you are aware of all risk involved.": "",
 	"Please note:": "",
 	"Please notice that the secret key will be shown only once.": "",
 	"Please save a backup of your": "",
 	"Please then click on the confirmation link in your email": "",
 	"Please, enter valid email address": "",
 	"Please, enter valid email address.": "",
-	"Please, remember that all risks are on your side.": "",
 	"Please, use unique API key name": "",
 	"Plug in telegram bot": "",
 	"Prediction": "",
@@ -355,6 +346,7 @@
 	"Private key": "",
 	"Proceed to verification": "",
 	"Progress": "",
+	"Project Introduction": "",
 	"Protected by code & mail": "",
 	"Protected by code only": "",
 	"Public key": "",
@@ -362,8 +354,6 @@
 	"Put the pincode from your email": "",
 	"Qubera Balance": "",
 	"Rate for": "",
-	"Rating": "",
-	"Rating for ": "",
 	"Read More": "",
 	"Receive transfer": "",
 	"Refill": "",
@@ -381,7 +371,6 @@
 	"Reserve": "",
 	"Reset password": "",
 	"Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.": "",
-	"Restart": "",
 	"Return": "",
 	"Revoke": "",
 	"Sale of": "",
@@ -392,7 +381,6 @@
 	"See results": "",
 	"Select currency": "",
 	"Sell": "",
-	"Send": "",
 	"Send activation email again": "",
 	"Send instant internal transfer to another account using their email": "",
 	"Send money": "",
@@ -403,6 +391,7 @@
 	"Session": "",
 	"Session Supply": "",
 	"Session Time": "",
+	"Session time was changed": "",
 	"Set email address whitelist.": "",
 	"Set merchant address for withdrawal": "",
 	"Settings": "",
@@ -421,13 +410,11 @@
 	"Status": "",
 	"Status of order": "",
 	"Status:": "",
-	"Stop": "",
 	"Stop Price": "",
 	"Stop limit": "",
 	"Stop price": "",
 	"Submission received!": "",
 	"Submit": "",
-	"Submit a coin for listing": "",
 	"Support": "",
 	"Terms and Conditions": "",
 	"Terms and conditions": "",
@@ -448,7 +435,7 @@
 	"To participate in the ICO {{IEOData.currencyDescription}} Coins": "",
 	"To plug in two factor authorisation telegram bot go to": "",
 	"To the next step": "",
-	"Token Allocaation": "",
+	"Token sale": "",
 	"Tool": "",
 	"Tools": "",
 	"Total": "",
@@ -489,20 +476,23 @@
 	"Use this code to get the transfer": "",
 	"User email not found.": "",
 	"Users from the following jurisdictions will not be able to participate in this token sale:": "",
+	"Utility Bill": "",
 	"Verification": "",
+	"Verification ID Document": "",
 	"Verify account": "",
 	"Verify account now": "",
-	"Verify your account id participate": "",
+	"Verify your account to participate": "",
 	"View": "",
 	"Volume": "",
 	"Wait for the tokens to be added to your balance within the specified time.": "",
 	"Wait tokens": "",
 	"Warning:": "",
+	"We dont know what exactly, but we will!": "",
 	"We have good news for you! It’s more then 24 currencies available for deposit right now:": "",
 	"We sent the confirmation link to": "",
 	"We will not credit your account with tokens from that sale": "",
-	"What are demands to Projects that want to have IEO?": "",
-	"Why IEO is considered more safe than ICO?": "",
+	"What are the demands to Projects that want to conduct an IEO?": "",
+	"Why IEO is considered safer than ICO?": "",
 	"Withdraw": "",
 	"Wrong email": "",
 	"Yes": "",
@@ -516,14 +506,12 @@
 	"You have": "",
 	"You have already used the link to confirm your registration. If necessary, please repeat the registration process.": "",
 	"You have already used the link to reset your password. If necessary, please repeat the password recovery process.": "",
-	"You must pass identity verification to access your withdrawal": "",
 	"You should enter": "",
 	"You should have positive balance in ": "",
+	"You should pass identity verification to achive something usefull and important.": "",
 	"You successfuly got": "",
 	"You want to transfer:": "",
 	"You want to withdraw:": "",
-	"Your ID information has been verified.": "",
-	"Your KYC procedure is processing, press ": "",
 	"Your available balance:": "",
 	"Your cam": "",
 	"Your daily output limit for this currency has been exceeded. Please try again tomorrow.": "",
@@ -533,12 +521,14 @@
 	"Your session has expired. Please log in.": "",
 	"address": "",
 	"address for withdrawal": "",
-	"and can end any time after coins are sold.": "",
+	"and ends right after all coins are sold.": "",
+	"and get a Level 1 account": "",
+	"and get a Level 2 account": "",
+	"available after ID verification": "",
 	"background": "",
 	"close": "",
 	"delete": "",
 	"enter the number of token": "",
-	"feature": "",
 	"for": "",
 	"for safety, to confirm that you it is you": "",
 	"funds": "",
@@ -549,13 +539,11 @@
 	"or": "",
 	"orders": "",
 	"page": "",
-	"project introduction": "",
 	"results": "",
 	"step": "",
 	"table": "",
 	"test link": "",
 	"to deposit": "",
-	"to launch in 2019:": "",
 	"to make a payment": "",
 	"to this deposit address.": "",
 	"to: All Balance": "",
@@ -563,7 +551,6 @@
 	"to: Pending Requests": "",
 	"use only (A-z), (–), (=) symbols,": "",
 	"user can get the money if he knows the transfer code": "",
-	"© 2019 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved": "",
 	"Аvailable": "",
 	"Сonfirm your details": ""
 }
