--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,23 @@
                 }
               ]
             },
+            "dedik": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dedik.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": true,
+              "buildOptimizer": true
+            },
             "staging": {
               "fileReplacements": [
                 {
@@ -121,6 +138,9 @@
             },
             "pre-prod-local": {
               "browserTarget": "exrates-front-new:build:pre-prod-local"
+            },
+            "dedik": {
+              "browserTarget": "exrates-front-new:build:dedik"
             },
             "staging": {
               "browserTarget": "exrates-front-new:build:staging"
