--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -17,5 +17,6 @@
   "space_in_empty_paren": false,
   "space_in_paren": false,
   "unescape_strings": false,
-  "wrap_line_length": 0
+  "wrap_line_length": 160,
+  "wrap_attributes": "force-expand-multiline"
 }
