--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~5.0.1",
     "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "3.2.4"
   }
 }
