--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     // Set the default
     "editor.formatOnSave": false,
     // Enable per-language
-    "[typescript]": {
-        "editor.formatOnSave": true
-    },
+    // "[typescript]": {
+    //     "editor.formatOnSave": true
+    // },
     "[html]": {
         "editor.formatOnSave": true
     }
