--- a/translate/baseJSON/_app.json
+++ b/translate/baseJSON/_app.json
@@ -467,7 +467,7 @@
 	"Type": "",
 	"US Dollar": "",
 	"Unfortunately now you are not able to trade on this version of the website.": "",
-	"Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\">exrates.me</a> to proceed your action.": "",
+	"Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\" rel=\"nofollow noopener noreferrer\">exrates.me</a> to proceed your action.": "",
 	"Update password": "",
 	"Upload image of your face": "",
 	"Use Google Authenticator to generate pincode": "",
