--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.5",
     "file-saver": "^2.0.0",
+    "from-exponential": "^1.0.0",
     "geetest": "^4.1.2",
     "html2canvas": "^1.0.0-rc.3",
     "jspdf": "^1.5.3",
