--- a/package.json
+++ b/package.json
@@ -45,10 +45,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.5",
     "file-saver": "^2.0.0",
-    "from-exponential": "^1.0.0",
-    "geetest": "^4.1.2",
-    "html2canvas": "^1.0.0-rc.3",
-    "jspdf": "^1.5.3",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mydatepicker": "^2.6.5",
@@ -58,6 +55,7 @@
     "ngx-moment": "^3.3.0",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.0.0",
+    "ngx-slick-carousel": "^0.4.6",
     "ngx-toastr": "^10.0.2",
     "ngx-webcam": "^0.2.0",
     "ngx-xml2json": "^1.0.2",
@@ -66,6 +64,7 @@
     "reselect": "^3.0.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.3.0",
     "zone.js": "^0.8.29"
   },
